--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,4 +24,4 @@ jobs:
           project_path: "."
           binary_name: "qme"
           asset_name: qme-${{ matrix.goos }}-${{ matrix.goarch }}
-          extra_files: LICENSE README.md
+          extra_files: LICENSE.txt README.md
